# textbite

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
benchmark/: benchmark_inference_time.py  plot_baseline_dist.py
scripts/: embedding.sh
scripts/label_studio/: mapping.sh
scripts/models/baseline/: best_dist_coef.sh  create_dataset_sge.sh  create_embeddings.sh  embedding.sh  finetune_czert.sh  finetune_lm.sh  infer.sh  infer_sge.sh  test.sh  train.sh  train_kb.sh
scripts/models/graph/: create_graphs.sh  infer_kb.sh  train.sh  train_kb.sh
textbite/: annotation_manipulation.py  bite.py  embedding.py  geometry.py  infer.py  language_model.py  utils.py
textbite/data_processing/: augment_images.py  generate_xml_uuids.py  label_studio.py  label_studio_to_bites.py  label_studio_to_json.py  label_studio_to_labels.py  label_studio_to_yolo.py
textbite/existing_methods/: texttiling.py
textbite/label_studio/: create_tasks.py  label_studio_to_lines.py  label_studio_to_yolo.py  mapping.py  visualize_yolo.py  yolo_to_label_studio.py
textbite/models/: MLP.py  autoencoder.py  evaluate.py  feature_extraction.py  improve_pagexml.py  utils.py
textbite/pagexml/: filter_xml.py  xml_to_txt.py
textbite/reading_order/: sort_reading_order.py  test_reading_order.py
textbite/visualization/: utils.py  visualize_bites.py  visualize_geometry.py  visualize_joiner_graph.py  visualize_joiner_results.py  visualize_json.py  visualize_neighbours.py  visualize_region_geometry.py  visualize_region_visibility.py  visualize_visibility.py  visualize_yolo.py
(+47 files in other folders)
