[build-system]
requires = [ "setuptools>=61" ]

[project]
name = "textbite"
version = "1.0.0"
description = "Toolkit for semantic text segmentation in complex document pages."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["Layout analysis", "text segmentation", "machine learning", "language models", "graph neural networks", "object detection", "YOLOv8"]

authors = [
  {email = "martinkostelnik0@gmail.com", name = "Martin Kostelník"},
  {email = "ibenes@fit.vutbr.cz", name = "Karel Beneš"},
]

classifiers=[
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.package-dir]
"textbite" = "textbite"

[project.scripts]
textbite = "textbite.scripts.infer:main"
